Add more content

--- a/sirawishW.html
+++ b/sirawishW.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1> MY BIO</h1>
-    <img src="./img/drawer.jpg" height="250" width="200" alt="profile">
     <p>
         <pre>
+            <img src="./img/drawer.jpg" height="250" width="200" alt="profile">
             Name           : Sirawish Wongsuthipakorn
 
             Nickname       : Oat
@@ -21,9 +21,13 @@
 
             Get to know    : I am a very easy going person and get along quite well with other people
 
-                                I actually quite funny and have a lot of stories and things to talk about so you won't get bored talking with me at all!
+                             I actually quite funny and have a lot of stories and things to talk about so you won't get bored talking with me at all!
+
+            Podcast to share :
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Vp8cARsDfMw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </pre>
     </p>
-    <a href="./index.html">first page</a>
+    <a href="./index.html">home page</a>
 </body>
 </html>
